--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
 	color: #000000;
 	font-weight: bold;
 	line-height: 24px;
+	text-transform: uppercase;
 }
 .visually-hidden {
 	display: none;
@@ -15,4 +16,5 @@ body {
 	color: #ffffff;
 	font-weight: bold;
 	line-height: 42px;
+	text-transform: uppercase;
 }
