--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,14 @@ body {
 	text-transform: uppercase;
 }
 .visually-hidden {
-	display: none;
+	position: absolute;
+	overflow: hidden;
+	clip: rect(0 0 0 0);
+	height: 1px;
+	width: 1px;
+	margin: -1px;
+	padding: 0;
+	border: 0;
 }
 .feature-item h2 {
 	font-size: 30px;
